Actualizadas las clases Ejercito, Guerrero, etc