@@ -1,12 +1,12 @@
 package com.tierrafantasia.entidades;
 
 public class Nortaichian extends Guerrero{
-	
+
 	private int esPiedra = 0;
 	private int furia = 0;
-	
-	public Nortaichian(Bando bando) {
-		super(66, 18, bando);
+
+	public Nortaichian() {
+		super(66, 18);
 	}
 
 	@Override
@@ -14,10 +14,10 @@ public class Nortaichian extends Guerrero{
 		if(!this.equals(enemigo) && !this.isDesmayado() && this.esPiedra <= 0) { /// es piedra no deberia llegar nunca a ser < 0
 			int damage = this.getBasicDamage();
 			double salud = this.getSaludActual()*1.04;
-			
+
 			if(this.furia > 0)
 				damage*=2;
-			
+
 			enemigo.esAtacado(damage);
 			//este if creo si no me equivoco
 			//es para que no se sume mas salud de la salud maxima
@@ -30,16 +30,16 @@ public class Nortaichian extends Guerrero{
 				this.setSaludActual(this.getSaludInicial());
 		}
 	}
-	
+
 	@Override
 	public void atacar(Ejercito enemigo) {
-		if(!this.equals(enemigo.unidades.getFirst()) && !this.isDesmayado() && this.esPiedra <= 0) {
+		if(!this.equals(enemigo.unidades.get(0)) && !this.isDesmayado() && this.esPiedra <= 0) {
 			int damage = this.getBasicDamage();
 			double salud = this.getSaludActual()*1.04;
-			
+
 			if(this.furia > 0)
 				damage*=2;
-			
+
 			enemigo.esAtacado(damage);
 			if(this.getSaludInicial() > salud)
 				this.setSaludActual(salud);
@@ -47,7 +47,7 @@ public class Nortaichian extends Guerrero{
 				this.setSaludActual(this.getSaludInicial());
 		}
 	}
-	
+
 	@Override
 	public void esAtacado(int damage) {
 		if(!this.isDesmayado()) {
@@ -56,17 +56,17 @@ public class Nortaichian extends Guerrero{
 			this.setSaludActual(this.getSaludActual()-damage);
 			this.furia = 2;
 		}
-		
+
 	}
-	
+
 	@Override
 	public void descansar() {
 		if(!this.isDesmayado() && this.esPiedra <= 0) {
 			this.setSaludActual(this.getSaludInicial());
 			this.esPiedra = 2;
 		}
-		
+
 	}
-	
-	
+
+
 }
