@@ -1,13 +1,13 @@
 package com.tierrafantasia.entidades;
 
 public class Radaiteran extends Guerrero{
-	
+
 	private int cantAtaquesDados = 0;
-	
-	public Radaiteran(Bando bando) {
-		super(36, 56, bando);
+
+	public Radaiteran() {
+		super(36, 56);
 	}
-	
+
 	@Override
 	public void atacar(Guerrero enemigo) {
 		int damage = this.getBasicDamage() + (3*this.cantAtaquesDados);
@@ -17,11 +17,11 @@ public class Radaiteran extends Guerrero{
 
 	@Override
 	public void atacar(Ejercito enemigo) {
-		if(!this.equals(enemigo.unidades.getFirst()) && !this.isDesmayado()) {
+		if(!this.equals(enemigo.unidades.get(0)) && !this.isDesmayado()) {
 			int damage = this.getBasicDamage() + (3*this.cantAtaquesDados);
 			enemigo.esAtacado(damage);
 			this.cantAtaquesDados++;
-		
+
 		}
 	}
 	
