@@ -1,48 +1,47 @@
 package com.tierrafantasia.entidades;
 
 public class Wrives extends Guerrero{
-	
+
 	private boolean fueAtacado = true;
 	private int cantAtaquesDados = 0;
-	
-	public Wrives(Bando bando) {
-		super(108, 113, bando);
-		
+
+	public Wrives() {
+		super(108, 113);
 	}
 
 	@Override
 	public void atacar(Guerrero enemigo) {
 		if(!this.equals(enemigo) && !this.isDesmayado() && this.fueAtacado) {
 			int damage = this.getBasicDamage();
-			
+
 			if(this.cantAtaquesDados == 2) {
 				damage *= 2;
 				this.cantAtaquesDados = 0;
 			} else {
 				this.cantAtaquesDados++;
 			}
-			
+
 			enemigo.esAtacado(damage);
 		}
 	}
-	
+
 	@Override
 	public void atacar(Ejercito enemigo) {
-		if(!this.equals(enemigo.unidades.getFirst()) && !this.isDesmayado() && this.fueAtacado) {
+		if(!this.equals(enemigo.unidades.get(0)) && !this.isDesmayado() && this.fueAtacado) {
 			int damage = this.getBasicDamage();
-			
+
 			if(this.cantAtaquesDados == 2) {
 				damage *= 2;
 				this.cantAtaquesDados = 0;
 			} else {
 				this.cantAtaquesDados++;
 			}
-			
+
 			enemigo.esAtacado(damage);
 		}
 	}
-	
-	
+
+
 	@Override
 	public void esAtacado(int damage) {
 		if(!this.isDesmayado()) {
@@ -55,18 +54,18 @@ public class Wrives extends Guerrero{
 			}
 		}
 	}
-	
+
 	@Override
 	public void descansar() {
 		if(!this.isDesmayado()) {
 			double aux = this.getSaludActual();
 			this.fueAtacado = false;
 			this.setSaludInicial(this.getSaludInicial()+50);
-			
+
 			if(aux+50 <= this.getSaludInicial())
 				this.setSaludActual(aux+50);
-			
-			
+
+
 		}
 	}
 }
